apps/base/nginx-test/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test
  namespace: nginx-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx-test.zonedev.be`)
      kind: Rule
      services:
        - name: nginx-test
          port: 80
  tls:
    secretName: nginx-test-tls
